# c4pkg

./: .gitignore  CMakeLists.txt  README.md  flags.txt  make-pkg.sh  manifest.json
docs/: How-a-package-will-be-installed.md  Packages-in-github.md  The-structure-of-package-zip.md
include/: c4pkg_config.h  c4pkg_version.h
pkgfiles/: flags.txt  manifest.json.in
prebuilt/include/openssl/: opensslconf.h
src/: main.c  test.c
test/: manifest.json
tools/: add-copyright.sh  build-and-package.sh  common.sh  make-package.sh  make-pkg.sh
tools/android-build/: Android.mk  Application.mk
